# AU_UAV_ROS_Fsquared

./: .gitignore  README.md
AU_UAV_GUI/: CMakeLists.txt  TelemetryUpdate.h~  mainpage.dox  mainpage.dox~  manifest.xml  numericlistwidgetitem.h  rosbuild.cmake
AU_UAV_GUI/src/: flightvisualization.cpp  flightvisualization.cpp.orig  flightvisualization.cpp.orig~  flightvisualization.cpp~  jsinterface.cpp.orig  jsinterface.cpp.orig~  jsinterface.cpp~  main.cpp.orig  main.cpp.orig~  main.cpp~  mainwindow.cpp  mainwindow.cpp.orig  missionplanner.cpp  missionplanner.cpp.orig  missionplanner.cpp~  qnode.cpp  qnode.cpp.orig  qnode.cpp~
AU_UAV_GUI/ui/: flightvisualization.ui  mainwindow.ui
AU_UAV_stack/AU_UAV_GUI/: CMakeLists.txt.user~  CMakeLists.txt~  TelemetryUpdate.h  numericlistwidgetitem.cpp  (+1 more)
AU_UAV_stack/AU_UAV_ROS/: CMakeLists.txt  CMakeLists.txt~  Makefile~  manifest.xml  manifest.xml~
AU_UAV_stack/AU_UAV_ROS/cmake/: FindMAVLINK.cmake
AU_UAV_stack/AU_UAV_ROS/courses/: AT.course  AT2.course  Collision.course  REUTest.course  REUTest2.course  TEST.course  TT.course  TT2.course  negAlt.course  p32.course  realAndSim.course~  realAndSim2.course~  simAndReal.course~  test.course
AU_UAV_stack/AU_UAV_ROS/flightData/: blah  blah.kml  output.txt.kml  text.txt
AU_UAV_stack/AU_UAV_ROS/include/AU_UAV_ROS/: ForceField.h  Fsquared.h  PlaneCoordinator.h  SimulatedPlane.h  planeObject.h  planeObject.h~  ripna.h~  standardDefs.h  standardDefs.h~  standardFuncs.h  standardFuncs.h~  vmath.h
AU_UAV_stack/AU_UAV_ROS/include/mavlink/v0.9/ardupilotmega/: ._mavlink_msg_digicam_configure.h
AU_UAV_stack/AU_UAV_ROS/include/mavlink/v1.0/ardupilotmega/: ardupilotmega.h  version.h
AU_UAV_stack/AU_UAV_ROS/launch/: distGuiDriven.launch  evaluation.launch  guiDriven.launch  guiDriven.launch~  realAndSim.launch  realityAndSim.launch~  realityOnly.launch  realityOnly.launch~  restart.launch
AU_UAV_stack/AU_UAV_ROS/message_definitions/: common.xml  common.xml~
AU_UAV_stack/AU_UAV_ROS/msg/: Command.msg~  TelemetryUpdate.msg~
AU_UAV_stack/AU_UAV_ROS/msg_gen/cpp/include/AU_UAV_ROS/: Command.h  TelemetryUpdate.h
AU_UAV_stack/AU_UAV_ROS/paths/: SDTest.path  SDTest.path~
AU_UAV_stack/AU_UAV_ROS/scores/: blah.score  delete_me.score  delete_scores.txt  final_16_500m_x1_withAvoidance.score  final_scores.txt  output.txt.score
AU_UAV_stack/AU_UAV_ROS/scores/Old Scores/: final_4_500m_1_15x_lenient_noAvoidance.score  final_4_500m_1_deleteMe.score  final_4_500m_1_x15_lenient_withAvoidance.score  final_4_500m_2_x15_noAvoidance.score  final_scores.txt  plsdontcrash_scores.txt
AU_UAV_stack/AU_UAV_ROS/scores/Old Scores/withoutCrashedPlanes/: final_16_500m_1_x100_90sec_noRHR.score  final_4_500m_1.score  final_4_500m_1_x100_noRHR.score  final_4_500m_1_x10_5min_noRHR.score  final_4_500m_1_x10speed.score  final_4_500m_1_x1_900sec.score
AU_UAV_stack/AU_UAV_ROS/scores/Old Scores/withoutCrashedPlanes/noAvoidance/: final_16_500m_1_x100_NOAVOIDANCE.score
AU_UAV_stack/AU_UAV_ROS/scores/Old Scores/withoutCrashedPlanes/with right hand rule/: final_4_500m_1_x100.score
AU_UAV_stack/AU_UAV_ROS/scores/Presentation Scores/Avoidance/16 planes/: final_16_1000m_1_x10_withAvoidance.score  final_16_500m_1_x10_withAvoidance.score
AU_UAV_stack/AU_UAV_ROS/scores/Presentation Scores/Avoidance/32 planes/: final_32_1000m_1_x10_withAvoidance.score  final_32_500m_1_x10_withAvoidance.score
AU_UAV_stack/AU_UAV_ROS/scores/Presentation Scores/Avoidance/4 planes/: final_4_1000m_1_x10_withAvoidance.score  final_4_500m_1_x10_withAvoidance.score
AU_UAV_stack/AU_UAV_ROS/scores/Presentation Scores/Avoidance/8 planes/: final_8_1000m_1_x10_withAvoidance.score  final_8_500m_1_x10_withAvoidance.score
AU_UAV_stack/AU_UAV_ROS/scores/Presentation Scores/No Avoidance/16 planes/: final_16_1000m_1_x10_noAvoidance.score  final_16_500m_1_x10_noAvoidance.score
AU_UAV_stack/AU_UAV_ROS/scores/Presentation Scores/No Avoidance/32 planes/: final_32_1000m_1_x10_noAvoidance.score  final_32_500m_1_x10_noAvoidance.score
AU_UAV_stack/AU_UAV_ROS/scores/Presentation Scores/No Avoidance/4 planes/: final_4_1000m_1_x10_noAvoidance.score  final_4_500m_1_x10_noAvoidance.score
AU_UAV_stack/AU_UAV_ROS/scores/Presentation Scores/No Avoidance/8 planes/: final_8_1000m_1_x10_noAvoidance.score  final_8_500m_1_x10_noAvoidance.score
AU_UAV_stack/AU_UAV_ROS/src/: ControlMenu.cpp  ControlMenu.cpp~  ForceField.cpp  Fsquared.cpp  XbeeIO.cpp  XbeeIO.cpp~  XbeeIO.cpp~ (Case Conflict 1)  XbeeIOTest.cpp~  collisionAvoidance.cpp  collisionAvoidance.cpp~  coordinator.cpp  distSimulator.cpp  evaluator.cpp  guiInterfacer.cpp  guiInterfacer.cpp~  planeObject.cpp  planeObject.cpp~  ripna.cpp  simulator.cpp  simulator.cpp~  standardFuncs.cpp  vmath.cpp
AU_UAV_stack/AU_UAV_ROS/src/AU_UAV_ROS/: PlaneCoordinator-afterReWork-2-7-2013.cpp~  PlaneCoordinator.cpp  PlaneCoordinator.cpp~  SimulatedPlane.cpp  SimulatedPlane.cpp~
AU_UAV_stack/AU_UAV_ROS/src/AU_UAV_ROS/srv/: _SendFilePath.py  _StartCollisionAvoidance.py  _StartCoordinator.py  _StartSimulator.py  _StartXbeeIO.py  __init__.py
AU_UAV_stack/AU_UAV_ROS/srv/: StartXbeeIO.srv
AU_UAV_stack/AU_UAV_ROS/srv_gen/cpp/include/AU_UAV_ROS/: CreateSimulatedPlane.h  DeleteSimulatedPlane.h  GoToWaypoint.h  LoadCourse.h  LoadPath.h  RequestPlaneID.h  RequestWaypointInfo.h  SaveFlightData.h  SendFilePath.h  StartCollisionAvoidance.h  StartCoordinator.h  StartSimulator.h  StartXbeeIO.h
AU_UAV_stack/AU_UAV_ROS/srv_gen/lisp/: AU_UAV_ROS-srv.asd  SendFilePath.lisp  StartCollisionAvoidance.lisp  StartCoordinator.lisp  StartSimulator.lisp  StartXbeeIO.lisp  _package.lisp  _package_StartCoordinator.lisp
AU_UAV_stack/AU_UAV_ROS/test/: FSquared_test.cpp  ForceShape_test.cpp  PlaneCoordinatorTest.cpp  PlaneCoordinatorTest.cpp~  PlaneCoordinatorTest~  StandardDefsTest.cpp  StandardDefsTest.cpp~  XbeeIOTest.cpp  XbeeIOTest.cpp~  andrew_Fsquared_test.cpp  tempForceWaypoint.cpp  wu_fsquared_test.cpp
Documentation/: Fall 2013 Senior Design - Cycle 3 Deliverable.docx  REUIntro.pptx
Google_Maps_CMAKE/: CMakeLists.txt~  manifest.xml
(+81 files in other folders)
